<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarPortfolio"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_55dp"
        android:background="@color/colorPrimary1"
        android:elevation="@dimen/space_0dp"
        android:paddingVertical="@dimen/space_12dp"
        android:paddingTop="@dimen/space_10dp"
        android:paddingBottom="@dimen/space_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/space_24dp"
            android:layout_height="@dimen/space_24dp"
            android:layout_marginStart="@dimen/space_15dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:text="@string/portfolio"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnSort"
            android:layout_width="@dimen/space_24dp"
            android:layout_height="@dimen/space_24dp"
            android:layout_marginEnd="@dimen/space_10dp"
            android:contentDescription="@string/sort"
            android:src="@drawable/ic_sort"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivView"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <View
            android:id="@+id/ivView"
            android:layout_width="@dimen/space_1dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/space_10dp"
            android:background="@color/colorPrimary2"
            android:contentDescription="@string/view"
            app:layout_constraintBottom_toBottomOf="@id/ivSearch"
            app:layout_constraintEnd_toStartOf="@id/ivSearch"
            app:layout_constraintTop_toTopOf="@id/ivSearch" />


        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="@dimen/space_24dp"
            android:layout_height="@dimen/space_24dp"
            android:layout_marginEnd="@dimen/space_15dp"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50dp"
        android:elevation="@dimen/space_0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarPortfolio"
        app:tabIndicatorColor="@color/tab_text_active"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorGravity="bottom"
        app:tabIndicatorHeight="@dimen/space_0dp"
        app:tabSelectedTextColor="@color/tab_text_active"
        app:tabTextAppearance="@style/CustomTabText"
        app:tabTextColor="@color/tab_text_inactive" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bottom_nav_color"
        app:itemActiveIndicatorStyle="@android:color/transparent"
        app:itemIconTint="@drawable/bottom_nav_selector"
        app:itemRippleColor="@drawable/bottom_nav_selector"
        app:itemTextColor="@drawable/bottom_nav_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>