<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/summarySheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/info_color"
        app:cardElevation="@dimen/space_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.SheetTopRounded"
        app:strokeColor="@color/divider"
        app:strokeWidth="@dimen/space_1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_8dp">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupSummaryDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tvSummaryCurrent,tvSummaryCurrentValue,
        tvSummaryInvestmentLabel,tvSummaryInvestment,
        tvSummaryTodaysPnlLabel,tvSummaryTodaysPnl,divider" />
            <TextView
                android:id="@+id/tvSummaryCurrent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_current_value"
                android:textColor="@color/text_muted"
                app:layout_constraintEnd_toStartOf="@id/tvSummaryCurrentValue"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSummaryCurrentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tvSummaryCurrent"
                app:layout_constraintEnd_toEndOf="parent"
                 />

            <TextView
                android:id="@+id/tvSummaryInvestmentLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12dp"
                android:paddingTop="@dimen/space_10dp"
                android:paddingBottom="@dimen/space_10dp"
                android:text="@string/label_total_investment"
                android:textColor="@color/text_muted"
                app:layout_constraintEnd_toStartOf="@id/tvSummaryInvestment"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSummaryCurrent" />

            <TextView
                android:id="@+id/tvSummaryInvestment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tvSummaryInvestmentLabel"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <!-- Row 3 -->
            <TextView
                android:id="@+id/tvSummaryTodaysPnlLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_12dp"
                android:text="@string/today_39_s_profit_amp_loss"
                android:textColor="@color/text_muted"
                app:layout_constraintEnd_toStartOf="@id/tvSummaryTodaysPnl"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSummaryInvestmentLabel" />

            <TextView
                android:id="@+id/tvSummaryTodaysPnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tvSummaryTodaysPnlLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Divider -->
            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/space_1dp"
                android:layout_marginTop="@dimen/space_12dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSummaryTodaysPnlLabel" />

            <!-- Toggle Row -->
            <TextView
                android:id="@+id/tvSummaryToggleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_6dp"
                android:text="@string/profit_amp_loss"
                android:textColor="@color/text_muted"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <ImageView
                android:id="@+id/ivSummaryToggle"
                android:layout_width="@dimen/space_24dp"
                android:layout_height="@dimen/space_24dp"
                android:scaleType="centerInside"
                android:layout_marginStart="@dimen/space_8dp"
                android:contentDescription="@string/content_toggle"
                android:src="@drawable/baseline_keyboard_arrow_down_24"
                app:layout_constraintTop_toTopOf="@id/tvSummaryToggleLabel"
                app:layout_constraintStart_toEndOf="@id/tvSummaryToggleLabel" />

            <TextView
                android:id="@+id/tvSummaryTotalPnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintBaseline_toBaselineOf="@id/tvSummaryToggleLabel"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHoldings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/space_50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_holding" />

    <!-- Center ProgressBar -->
    <ProgressBar
        android:id="@+id/progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
